2002-03-04  Christian Lestrade  <christian.lestrade@free.fr>

	* include/sys/termios.h: Define _POSIX_VDISABLE.  Define CCEQ macro.
	* fhandler_termios.cc: Include <sys/termios.h>.
	(line_edit): Recognize disabled c_cc[] chars.  Ignore VDISCARD when
	not in ICANON mode.

2002-03-04  Dmitry Timoshkov  <dmitry@baikal.ru>

	* syscalls.cc (truncate64): Use ftruncate64 directly to not lose
	upper 32 bits.

2002-03-04  Robert Collins  <rbtcollins@hotmail.com>

	* cygserver_shm.cc (delete_shmnode): New function.
	(client_request_shm::serve): Use it.

2002-03-04  Robert Collins  <rbtcollins@hotmail.com>

	* cygserver_shm.cc (client_request_shm::serve): Implement SHM_DETACH.
	* shm.cc (shmdt): Implement.

2002-03-04  Robert Collins  <rbtcollins@hotmail.com>

	* cygserver_shm.cc: Run indent.
	(deleted_head): New global for storing shm id's pending deletion.
	(client_request_shm::serve): Return ENOSYS for invalid request types.
	Implement SHM_DEL - delete a shm id.
	* cygserver_shm.h (SHM_DEL): New type value.
	* shm.cc (delete_inprocess_shmds): New function, does what it's name implies.
	(shmctl): Implement shm_rmid control type.

2002-03-04  Robert Collins  <rbtcollins@hotmail.com>

	* Makefile.in (install): Remove install-bin to allow make install to work.

2002-03-03  Robert Collins  <rbtcollins@hotmail.com>

	* shm.cc (shmat): Prevent a compile error.
	(shmdt): Set errno as this function is incomplete.

2002-02-28  Christopher Faylor  <cgf@redhat.com>

	* times.cc: Remove if 0'd code.  Clean up slightly.

2002-02-28  Robert Collins  <rbtcollins@hotmail.com>

	* Merged cygwin_daemon into head minus the new shm and ipc exports.

2002-02-28  Robert Collins  <rbtcollins@hotmail.com>

	* fhandler_tty.cc (fhandler_tty_slave::open): More debugging.
	(fhandler_tty_slave::read): Fix printf type for the handle.
	* tty.cc (tty::common_init): Add a FIXME for security.

2002-01-29  Robert Collins  <rbtcollins@hotmail.com>

	* Makefile.in (OBJS): Remove duplicate localtime.o.
